2005-01-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/transposed-music.hh (class Transposed_music): remove.

	* lily/transposed-music.cc: remove

	* lily/include/relative-music.hh: remove.

	* lily/include/music-sequence.hh (struct Music_sequence): change
	into "namespace" class.

	* lily/untransposable-music.cc (Module): remove

	* lily/include/un-relativable-music.hh (Module): remove

	* lily/include/untransposable-music.hh (Module): remove

	* lily/include/music-list.hh (Module): remove file

	* lily/un-relativable-music.cc: remove file.

2005-01-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/parser.yy: Compile fix.

2005-01-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/music.hh (class Music): unvirtualize transpose().

	* lily/sequential-music.cc: remove file.

	* lily/include/lyric-combine-music.hh ("music.hh"): remove file.

	* lily/slur-scoring.cc (get_best_curve): only switch on
	DEBUG_SLUR_SCORING for non NDEBUG builds.

	* lily/include/music.hh (class Music): replace Music::start_mom()
	by start-callback property

	* lily/include/grace-music.hh: remove file. 

	* lily/stem.cc (height): robustness fix.

	* lily/time-scaled-music.cc: remove file.

	* lily/include/music.hh (class Music): include SCM init argument.
	(class Music): replace Music::get_length() virtual by
	length-callback property everywhere.

	* scripts/convert-ly.py (conv): add  # to \property scalar value.

	* mf/GNUmakefile: don't install *list.ly

2005-01-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile (CFF_FILES): Bugfix: only big cheeses and braces.

2005-01-12  Werner Lemberg  <wl@gnu.org>

	This patch addresses the following problems in the feta sources
	files which contribute to the fetaXX fonts.

	. Many fixes for rasterization at low resolutions (consistent use of
	  `vround' and `hround', integer shift values for paths, applying
	  `eps' for mirrored paths, use of `define_whole_pixels' and