@@ -30,6 +30,7 @@ public:
   static Moment minimum_start (SCM list);
 };
 
+SCM ly_transpose_key_alist (SCM l, SCM pit);
 Pitch music_list_to_relative (SCM l,Pitch p, bool ret_first);
 void transpose_music_list (SCM , Pitch);
 void compress_music_list (SCM, Moment);
